--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<h1><a href="index.html">Spectral</a></h1>
-			<nav id="nav">
+			<!-- <nav id="nav">
 				<ul>
 					<li class="special">
 						<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -39,7 +39,7 @@
 						</div>
 					</li>
 				</ul>
-			</nav>
+			</nav> -->
 		</header>
 
 		<!-- Banner -->
