--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- Two -->
 		<section id="two" class="wrapper alt style2">
 			<section class="spotlight">
-				<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+				<div class="image"><img src="images/Screenshot 2021-09-10 150224.png" alt="" /></div>
 				<div class="content">
 					<h2>Magna primis lobortis<br />
 						sed ullamcorper</h2>
