UPDATE NAME TITLE

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<h2>Spectral</h2>
-				<p>Another fine responsive<br />
-					site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h2>Gustavo Miranda</h2>
+				<p>Another fine web developer<br />
+					<!-- site template freebie<br />
+					crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
+				</p>
 				<ul class="actions special">
 					<li><a href="#" class="button primary">Activate</a></li>
 				</ul>
