--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
 					<h2>Please View My Projects Below</h2>
 					<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 						eget augue amet aliquet nisl cep donec</h2> -->
-					<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-						fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+					<p>Each project thumbnail is clickable and will take you to its live site.
+						<!-- Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+						fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper. -->
+					</p>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+					<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li> -->
+					<li><span class="icon fa-gem major style1"><span class="label">Lorem</span><i
+								class="fab fa-js"></i></span></li>
 					<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 					<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 				</ul>
