--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 				</header>
 				<ul class="icons major">
 					<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li> -->
-					<li><span class="icon fa-gem major style1"><span class="label">Lorem</span><i
-								class="fab fa-js"></i></span></li>
+					<li><span><span class="label">Lorem</span><i class="fab fa-js"></i></span></li>
 					<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 					<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 				</ul>
