--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
 			<section class="spotlight">
 				<div class="image"><img src="images/Screenshot 2021-09-10 150224.png" alt="" /></div>
 				<div class="content">
-					<h2>Magna primis lobortis<br />
-						sed ullamcorper</h2>
-					<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla
-						nullam aenean mi ligula.</p>
+					<h2>WatchIt</h2>
+					<!-- <h2>Magna primis lobortis<br />
+						sed ullamcorper</h2> -->
+					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
+						completion.</p>
 				</div>
 			</section>
 			<section class="spotlight">
