--- a/index.html
+++ b/index.html
@@ -95,19 +95,20 @@
 			<section class="spotlight">
 				<div class="image"><img src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
 				<div class="content">
-					<h2>Tortor dolore feugiat<br />
-						elementum magna</h2>
-					<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla
-						nullam aenean mi ligula.</p>
+					<h2>Ketchup</h2>
+					<!-- <h2>Tortor dolore feugiat<br />
+						elementum magna</h2> -->
+					<p>A website where users can rate and comment on their favorite TV shows.</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
 				<div class="content">
-					<h2>Augue eleifend aliquet<br />
-						sed condimentum</h2>
-					<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla
-						nullam aenean mi ligula.</p>
+					<h2>PBrain</h2>
+					<!-- <h2>Augue eleifend aliquet<br />
+						sed condimentum</h2> -->
+					<p>A flashcard quiz app which allows a user to view existing decks and cards, or create their own.
+					</p>
 				</div>
 			</section>
 		</section>
