UPDATE COPYRIGHT AND ONLINE PRESENCE IMAGES

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<!-- Two -->
 		<section id="two" class="wrapper alt style2">
 			<section class="spotlight">
-				<div class="image"><img src="images/Screenshot 2021-09-10 150224.png" alt="" /></div>
+				<div class="image"><img src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
 				<div class="content">
 					<h2>WatchIt</h2>
 					<!-- <h2>Magna primis lobortis<br />
@@ -167,14 +167,14 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="#" class="icon brands fa-angellist"><span class="label">Angel List</span></a></li>
+				<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; Untitled</li>
+				<li>&copy; Gustavo Miranda 2021</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
