--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html">Spectral</a></h1>
+			<h1><a href="index.html">Gustavo Miranda</a></h1>
 			<!-- <nav id="nav">
 				<ul>
 					<li class="special">
@@ -157,10 +157,10 @@
 					<h2>Arcue ut vel commodo</h2>
 					<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 				</header>
-				<ul class="actions stacked">
+				<!-- <ul class="actions stacked">
 					<li><a href="#" class="button fit primary">Activate</a></li>
 					<li><a href="#" class="button fit">Learn More</a></li>
-				</ul>
+				</ul> -->
 			</div>
 		</section>
 
