--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
 
 		<!-- CTA -->
 		<section id="cta" class="wrapper style4">
-			<div class="inner">
-				<header>
-					<h2>Arcue ut vel commodo</h2>
-					<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+			<div style="flex-direction: column; align-items: center;" class="inner">
+				<header style="padding-left: 3em;">
+					<h2 style="text-align: center;">Arcue ut vel commodo</h2>
+					<p style="text-align: center;">Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet
+						eleifend fringilla.</p>
 				</header>
 				<!-- <ul class="actions stacked">
 					<li><a href="#" class="button fit primary">Activate</a></li>
