--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Spectral by HTML5 UP</title>
+	<title>Gustavo Miranda</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -154,9 +154,9 @@
 		<section id="cta" class="wrapper style4">
 			<div style="flex-direction: column; align-items: center;" class="inner">
 				<header style="padding-left: 3em;">
-					<h2 style="text-align: center;">Arcue ut vel commodo</h2>
-					<p style="text-align: center;">Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet
-						eleifend fringilla.</p>
+					<h2 style="text-align: center;">Like What You See?</h2>
+					<p style="text-align: center;">Please use any of the links below to contact me if you would like to
+						work together.</p>
 				</header>
 				<!-- <ul class="actions stacked">
 					<li><a href="#" class="button fit primary">Activate</a></li>
