--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="assets/js/clickables.js"></script>
+	<!-- <script src="assets/js/clickables.js"></script> -->
 
 </body>
 
