TESTING DIV BUTTONS

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 		<!-- Two -->
 		<section id="two" class="wrapper alt style2">
 			<section class="spotlight">
-				<div class="image"><img src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
+				<div id="watch-it" style="cursor: pointer;" class="image"><img
+						src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
 				<div class="content">
 					<h2>WatchIt</h2>
 					<!-- <h2>Magna primis lobortis<br />
@@ -93,7 +94,7 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div class="image"><img src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
+				<div id="ketchup" class="image"><img src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
 				<div class="content">
 					<h2>Ketchup</h2>
 					<!-- <h2>Tortor dolore feugiat<br />
@@ -102,7 +103,7 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div class="image"><img src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
+				<div id="pbrain" class="image"><img src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
 				<div class="content">
 					<h2>PBrain</h2>
 					<!-- <h2>Augue eleifend aliquet<br />
@@ -190,7 +191,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<!-- <script src="assets/js/clickables.js"></script> -->
+	<script src="assets/js/clickables.js"></script>
 
 </body>
 
