ADD REMAINING CLICKABLE DIV LINKS

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div id="ketchup" class="image"><img src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
+				<div id="ketchup" style="cursor: pointer;" class="image"><img
+						src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
 				<div class="content">
 					<h2>Ketchup</h2>
 					<!-- <h2>Tortor dolore feugiat<br />
@@ -103,7 +104,8 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div id="pbrain" class="image"><img src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
+				<div id="pbrain" style="cursor: pointer;" class="image"><img
+						src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
 				<div class="content">
 					<h2>PBrain</h2>
 					<!-- <h2>Augue eleifend aliquet<br />
