--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div id="watch-it" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
 				<div class="content">
-					<h2>WatchIt</h2>
+					<h2><a href="https://watch-it-app.herokuapp.com/login">WatchIt</a></h2>
 					<!-- <h2>Magna primis lobortis<br />
 						sed ullamcorper</h2> -->
 					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
