ADD REMAINING PROJECT NAME TEXT HYPERLINKS

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div id="watch-it" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
 				<div class="content">
-					<h2><a href="https://watch-it-app.herokuapp.com/login">WatchIt</a></h2>
+					<h2><a target="_blank" href="https://watch-it-app.herokuapp.com/login">WatchIt</a></h2>
 					<!-- <h2>Magna primis lobortis<br />
 						sed ullamcorper</h2> -->
 					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
@@ -97,7 +97,7 @@
 				<div id="ketchup" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
 				<div class="content">
-					<h2>Ketchup</h2>
+					<h2><a target="_blank" href="https://aa-ketchup.herokuapp.com/">Ketchup</a></h2>
 					<!-- <h2>Tortor dolore feugiat<br />
 						elementum magna</h2> -->
 					<p>A website where users can rate and comment on their favorite TV shows.</p>
@@ -107,7 +107,7 @@
 				<div id="pbrain" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
 				<div class="content">
-					<h2>PBrain</h2>
+					<h2><a target="_blank" href="https://pbrain-app.herokuapp.com/">PBrain</a></h2>
 					<!-- <h2>Augue eleifend aliquet<br />
 						sed condimentum</h2> -->
 					<p>A flashcard quiz app which allows a user to view existing decks and cards, or create their own.
