ADD MOST OF ONLINE PRESENCE LINKS, EXCEPT EMAIL

--- a/index.html
+++ b/index.html
@@ -171,9 +171,12 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands fa-angellist"><span class="label">Angel List</span></a></li>
+				<li><a target="_blank" href="https://github.com/goosey-goose" class="icon brands fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a target="_blank" href="https://www.linkedin.com/in/gustavo-miranda-31218a30"
+						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a target="_blank" href="https://angel.co/u/gustavo-miranda-5"
+						class="icon brands fa-angellist"><span class="label">Angel List</span></a></li>
 				<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
