--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<link rel="icon" type="image/ico" href="images/favicon.ico" />
 </head>
 
 <body class="landing is-preload">
