--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<section id="banner">
 			<div class="inner">
 				<h2>Gustavo Miranda</h2>
-				<p>Another fine web developer<br />
+				<p>web developer<br />
 					<!-- site template freebie<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</p>
