ADD INITIAL CODE BLOCK FOR MEDIEVAL BNB SECTION

--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
 				</div>
 			</section>
 			<section class="spotlight">
+				<div id="medieval-bnb" style="cursor: pointer;" class="image"><img
+						src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
+				<div class="content">
+					<h2><a target="_blank" href="https://watch-it-app.herokuapp.com/login">WatchIt</a></h2>
+					<!-- <h2>Magna primis lobortis<br />
+						sed ullamcorper</h2> -->
+					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
+						completion.</p>
+				</div>
+			</section>
+			<section class="spotlight">
 				<div id="ketchup" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 150645.png" alt="" /></div>
 				<div class="content">
