UPDATE MEDIEVAL BNB SECTION

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 			</section>
 			<section class="spotlight">
 				<div id="medieval-bnb" style="cursor: pointer;" class="image"><img
-						src="images/Screenshot 2021-09-10 174658.png" alt="" /></div>
+						src="images/Screenshot 2021-11-09 153619.png" alt="" /></div>
 				<div class="content">
-					<h2><a target="_blank" href="https://watch-it-app.herokuapp.com/login">WatchIt</a></h2>
+					<h2><a target="_blank" href="https://medieval-bnb.herokuapp.com/">Medieval BNB</a></h2>
 					<!-- <h2>Magna primis lobortis<br />
 						sed ullamcorper</h2> -->
-					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
-						completion.</p>
+					<p>Medieval BNB is a unique take on AirBNB, where users can book stays at castles all over the
+						United Kindom.</p>
 				</div>
 			</section>
 			<section class="spotlight">
