--- a/index.html
+++ b/index.html
@@ -62,22 +62,9 @@
 		<section id="about" class="wrapper style1 special">
 			<div class="inner">
 				<header class="major">
-					<h2>Please View My Projects Below</h2>
-					<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
-						eget augue amet aliquet nisl cep donec</h2> -->
-					<p>Each project thumbnail is clickable and will take you to its live site.
-						<!-- Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-						fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper. -->
-					</p>
+					<h2>About Me</h2>
+					<p>This is just a test.</p>
 				</header>
-				<ul class="icons major">
-					<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li>
-					<!-- <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li>
-					<!-- <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-react"></i></span></li>
-				</ul>
 			</div>
 		</section>
 
