UPDATE ABOUT ME

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</section>
 
 		<!-- About -->
-		<section id="about" class="wrapper style1 special">
+		<section id="about" class="about_me wrapper style1 special">
 			<div class="inner">
 				<header class="major">
 					<h2>About Me</h2>
