UPDATE ABOUT ME SECTION TEXT

--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
 			<div class="inner">
 				<header class="major">
 					<h2>About Me</h2>
-					<p>This is just a test.</p>
+					<p>About six years ago I had a close group of friends who were all involved in tech, in one way or
+						another. I was eventually exposed to programming, and soon after, started teaching myself
+						Python. After some time, I created my first Windows application. Over the last six months I have
+						been sharpening my skills in Java Script, Express, Python, Flask, React, and Postgres. As a
+						matter of fact, I've recently built a full stack application that uses a Python back end and a
+						React front end and a Postgres data base. It is a Jira Issue Tracker Clone where users can
+						submit software bugs and track them through their completion. I know that, given the right
+						scenario, my skills and previous experience will more than allow me to join your team and hit
+						the ground running.</p>
 				</header>
 			</div>
 		</section>
