ADD LIST OF TECH STACKS USED IN EACH PROJECT

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<!-- <h2>Magna primis lobortis<br />
 						sed ullamcorper</h2> -->
 					<p>A Jira issue tracker clone where users can submit and track software bugs through to their
-						completion.</p>
+						completion. Tech stack used: PostgreSQL, Flask, React, Python, and SQLAlchemy.</p>
 				</div>
 			</section>
 			<section class="spotlight">
@@ -122,7 +122,7 @@
 					<!-- <h2>Magna primis lobortis<br />
 						sed ullamcorper</h2> -->
 					<p>Medieval BNB is a unique take on AirBNB, where users can book stays at castles all over the
-						United Kindom.</p>
+						United Kindom. Tech stack used: PostgreSQL, Express, React, Node, and Sequelize.</p>
 				</div>
 			</section>
 			<section class="spotlight">
@@ -132,7 +132,8 @@
 					<h2><a target="_blank" href="https://aa-ketchup.herokuapp.com/">Ketchup</a></h2>
 					<!-- <h2>Tortor dolore feugiat<br />
 						elementum magna</h2> -->
-					<p>A website where users can rate and comment on their favorite TV shows.</p>
+					<p>A website where users can rate and comment on their favorite TV shows. Tech stack used:
+						PostgreSQL, Express, Pug, Node, and Sequelize.</p>
 				</div>
 			</section>
 			<section class="spotlight">
@@ -143,6 +144,7 @@
 					<!-- <h2>Augue eleifend aliquet<br />
 						sed condimentum</h2> -->
 					<p>A flashcard quiz app which allows a user to view existing decks and cards, or create their own.
+						Tech stack used: PostgreSQL, Flask, React, Python, and SQLAlchemy.
 					</p>
 				</div>
 			</section>
