--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 				<ul class="icons major">
 					<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li> -->
 					<li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li>
+
+					<li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li>
 					<!-- <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li> -->
 					<li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li>
 					<!-- <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
