TEST ADDING SQLALCHEMY ICON

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
 	<link rel="icon" type="image/ico" href="images/favicon.ico" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 </head>
 
 <body class="landing is-preload">
@@ -97,6 +98,7 @@
 					<li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li>
 					<!-- <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li> -->
 					<li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li>
+					<li><span><i class="devicon-sqlalchemy-plain"></i></span></li>
 					<!-- <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
 					<li><span><i style="font-size: 6rem;" class="fab fa-react"></i></span></li>
 				</ul>
