--- a/index.html
+++ b/index.html
@@ -96,11 +96,14 @@
 					<li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li>
 
 					<li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li>
+					<li><span><i class="devicon-postgresql-plain-wordmark"></i></span></li>
 					<!-- <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li>
+					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li> -->
+					<li><span><i class="devicon-python-plain-wordmark"></i></span></li>
 					<li><span><i class="devicon-sqlalchemy-plain"></i></span></li>
 					<!-- <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-react"></i></span></li>
+					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-react"></i></span></li> -->
+					<li><span><i class="devicon-react-original-wordmark"></i></span></li>
 				</ul>
 			</div>
 		</section>
