ADD MORE DEVICONS

--- a/index.html
+++ b/index.html
@@ -93,17 +93,23 @@
 				</header>
 				<ul class="icons major">
 					<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li> -->
-					<li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li>
+					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li> -->
+					<li><span><i class="devicon-javascript-plain"></i></span></li>
 
-					<li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li>
+					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li> -->
+					<li><span><i class="devicon-nodejs-plain-wordmark"></i></span></li>
+					<li><span><i class="devicon-express-original-wordmark"></i></span></li>
+					<li><span><i class="devicon-sequelize-plain-wordmark"></i></span></li>
 					<li><span><i class="devicon-postgresql-plain-wordmark"></i></span></li>
 					<!-- <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li> -->
 					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-python"></i></span></li> -->
 					<li><span><i class="devicon-python-plain-wordmark"></i></span></li>
+					<li><span><i class="devicon-flask-original-wordmark"></i></span></li>
 					<li><span><i class="devicon-sqlalchemy-plain"></i></span></li>
 					<!-- <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
 					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-react"></i></span></li> -->
 					<li><span><i class="devicon-react-original-wordmark"></i></span></li>
+					<li><span><i class="devicon-redux-original"></i></span></li>
 				</ul>
 			</div>
 		</section>
