USE DIFFERENT NODE ICON AND CHANGE ICON SIZE

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-js"></i></span></li> -->
 					<li><span><i class="devicon-javascript-plain"></i></span></li>
 
-					<!-- <li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li> -->
-					<li><span><i class="devicon-nodejs-plain-wordmark"></i></span></li>
+					<li><span><i style="font-size: 6rem;" class="fab fa-node"></i></span></li>
+					<!-- <li><span><i class="devicon-nodejs-plain-wordmark"></i></span></li> -->
 					<li><span><i class="devicon-express-original-wordmark"></i></span></li>
 					<li><span><i class="devicon-sequelize-plain-wordmark"></i></span></li>
 					<li><span><i class="devicon-postgresql-plain-wordmark"></i></span></li>
