ADD MAILTO HREF FOR EMAIL CONTACT

--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
 				<li><a target="_blank" href="https://angel.co/u/gustavo-miranda-5"
 						class="icon brands fa-angellist"><span class="label">Angel List</span></a></li>
 				<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:g.ebenezer.miranda@gmail.com" class="icon solid fa-envelope"><span
+							class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Gustavo Miranda 2021</li>
