--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
 
 		<!-- Footer -->
 		<footer id="footer">
+			<div id="view_my_resume">
+				View My Resume
+			</div>
 			<ul class="icons">
 				<li><a target="_blank" href="https://github.com/goosey-goose" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
