--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div id="view_my_resume">
-				<h2>View My Resume Here</h2>
+				<h2>View My Resume <span id="resume_span">Here</span></h2>
 			</div>
 			<ul class="icons">
 				<li><a target="_blank" href="https://github.com/goosey-goose" class="icon brands fa-github"><span
