ADD MAX WIDTH TO PARAGRAPH ELEMENT

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 					<h2>Please View My Projects Below</h2>
 					<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 						eget augue amet aliquet nisl cep donec</h2> -->
-					<p>The following technologies were used to develop the various projects in the next section below.
+					<p id="project_intro_paragraph">The following technologies were used to develop the various projects
+						in the next section below.
 						Each project thumbnail is clickable and will take you to its live site.
 						<!-- Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 						fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper. -->
