ADD MORE CONTENT TO ABOUT ME SECTION

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
 			<div class="inner">
 				<header class="major">
 					<h2>About Me</h2>
-					<p>About six years ago I had a close group of friends who were all involved in tech, in one way or
+					<p>In my youth, having been exposed to my parent's successful Marketing careers, I chose that field
+						as my college major, along with a minor in Entrepreneurship. Some time after graduation, I felt
+						that there was still a void that needed to be filled in order to truly present myself as a
+						well-rounded and exceptionally skilled individual to any company seeking someone uniquely
+						prepared for the future, and that future had to include Full Stack Development.
+						<br>
+						<br>
+						About six years ago I had a close group of friends who were all involved in tech, in one way or
 						another. I was eventually exposed to programming, and soon after, started teaching myself
 						Python. After some time, I created my first Windows application. Over the last six months I have
 						been sharpening my skills in JavaScript, Express, Python, Flask, React, and PostgreSQL. As a
@@ -72,7 +79,8 @@
 						React frontend with a Postgres data base. It is a Jira issue tracker clone where users can
 						submit software bugs and track them through their completion. I know that, given the right
 						scenario, my skills and previous experience will more than allow me to join your team and hit
-						the ground running.</p>
+						the ground running.
+					</p>
 				</header>
 			</div>
 		</section>
