MODIFY CONTENT STRUCTURE IN ABOUT ME SECTION

--- a/index.html
+++ b/index.html
@@ -73,12 +73,19 @@
 						<br>
 						About six years ago I had a close group of friends who were all involved in tech, in one way or
 						another. I was eventually exposed to programming, and soon after, started teaching myself
-						Python. After some time, I created my first Windows application. Over the last six months I have
+						Python. After some time, I created my first Windows application.
+						<br>
+						<br>
+						Over the last six months I have
 						been sharpening my skills in JavaScript, Express, Python, Flask, React, and PostgreSQL. As a
 						matter of fact, I've recently built a full stack application that uses a Python backend and a
 						React frontend with a Postgres data base. It is a Jira issue tracker clone where users can
-						submit software bugs and track them through their completion. I know that, given the right
-						scenario, my skills and previous experience will more than allow me to join your team and hit
+						submit software bugs and track them through their completion.
+						<br>
+						<br>
+						Given the right
+						scenario, I know that my skills and previous experience will more than allow me to join your
+						team and hit
 						the ground running.
 					</p>
 				</header>
