MODIFY ABOUT ME SECTION CONTENT

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<header class="major">
 					<h2>About Me</h2>
 					<p>In my youth, having been exposed to my parent's successful Marketing careers, I chose that field
-						as my college major, along with a minor in Entrepreneurship. Some time after graduation, I felt
+						as my college major along with a minor in Entrepreneurship. Some time after graduation, I felt
 						that there was still a void that needed to be filled in order to truly present myself as a
 						well-rounded and exceptionally skilled individual to any company seeking someone uniquely
 						prepared for the future, and that future had to include Full Stack Development.
