UPDATE ABOUT ME

--- a/index.html
+++ b/index.html
@@ -68,14 +68,23 @@
 						as my college major along with a minor in Entrepreneurship. Some time after graduation, I felt
 						that there was still a void that needed to be filled in order to truly present myself as a
 						well-rounded and exceptionally skilled individual to any company seeking someone uniquely
-						prepared for the future, and that future had to include Full Stack Development.
+						prepared for the future, and that future had to include Full Stack Development. Then, about six
+						years
+						ago I had a close group of friends who were all involved in tech in one way or
+						another. I was eventually exposed to programming, and soon after, started teaching myself
+						Python. After some time, I created my first Windows application which minimized all of the
+						user's open
+						windows every hour in order to encourage regular 3-minute walking breaks. This app,
+						although extremely simple, did one very important thing: it confirmed the belief that my
+						professional
+						passion is Software Engineering.
 						<br>
 						<br>
-						About six years ago I had a close group of friends who were all involved in tech, in one way or
+						<!-- About six years ago I had a close group of friends who were all involved in tech, in one way or
 						another. I was eventually exposed to programming, and soon after, started teaching myself
 						Python. After some time, I created my first Windows application.
 						<br>
-						<br>
+						<br> -->
 						Over the last six months I have
 						been sharpening my skills in JavaScript, Express, Python, Flask, React, and PostgreSQL. As a
 						matter of fact, I've recently built a full stack application that uses a Python backend and a
