UPDATE ABOUT ME

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						Python. After some time, I created my first Windows application.
 						<br>
 						<br> -->
-						Over the last six months I have
+						Over the last several months I have
 						been sharpening my skills in JavaScript, Express, Python, Flask, React, and PostgreSQL. As a
 						matter of fact, I've recently built a full stack application that uses a Python backend and a
 						React frontend with a Postgres database. It is a Jira issue tracker clone where users can
