--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<div id="pbrain" style="cursor: pointer;" class="image"><img
 						src="images/Screenshot 2021-09-10 150916.png" alt="" /></div>
 				<div class="content">
-					<h2><a target="_blank" href="https://pbrain-app.herokuapp.com/">PBrain</a></h2>
+					<h2><a target="_blank" href="https://p-brain.herokuapp.com/">PBrain</a></h2>
 					<!-- <h2>Augue eleifend aliquet<br />
 						sed condimentum</h2> -->
 					<p>A flashcard quiz app which allows a user to view existing decks and cards, or create their own.
